# TakEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dependency.cmake  imgui.ini  main.cpp  readme.md
engine/: CmakeLists.txt
engine/src/: common.h  defines.hpp  engine.cpp  engine.h
engine/src/core/: camera.cpp  camera.hpp  clock.cpp  clock.h  clock.hpp  kMath.hpp  kmemory.cpp  kmemory.hpp  memory.cpp  memory.hpp  quaternionCamera.cpp  quaternionCamera.hpp  renderdoc_app.h  utils.cpp
engine/src/renderer/: BufferManager.cpp  BufferManager.hpp  CommandBufferUtils.hpp  ModelManager.cpp  ModelManager.hpp  ModelStructs.hpp  RenderPass.cpp  RenderPass.hpp  TextureManager.cpp  TextureManager.hpp  VulkanBase.cpp  VulkanBase.hpp  VulkanContext.hpp  VulkanDeferredBase.cpp  VulkanDeferredBase.hpp  ui.hpp  vulkan_context.h  vulkan_types.inl
engine/src/scenes/: DeferredPBRIBLScene.hpp  DeferredTriangleScene.cpp  DeferredTriangleScene.hpp  ModelScene.cpp  ModelScene.hpp  PBRIBLScene.cpp  PBRIBLScene.hpp  TriangleScene.cpp  TriangleScene.hpp  pbrScene.cpp  pbrScene.hpp
engine/src/testing/: ModelTest.cpp  ModelTest.hpp
shaders/: compile.bat  deferred_geometry.frag.spv  deferred_geometry.vert.spv  material_pbr.frag  material_pbr.frag.spv  material_unlit.frag  model.frag  model.frag.spv  model.vert  model.vert.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbr2.frag  pbrIbl.vert  pbrIbl.vert.spv  pbr_frag.spv  pbr_vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  ssao.frag.spv  ssao.vert.spv  ssao_blur.frag.spv  ui.vert
shaders/deferredShaders/: deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_lighting.frag.spv  deferred_lighting.vert  deferred_lighting.vert.spv  fullscreen.vert.spv  ssao.frag  ssao.frag.spv  ssao.vert  ssao_blur.frag  ssao_blur.frag.spv  ssao_blur.vert
shaders/includes/: tonemapping.glsl
testbed/: CMakeLists.txt  main.cpp  test.cpp
